--- a/collabsite/index.html
+++ b/collabsite/index.html
@@ -4,15 +4,36 @@
 	<Title>CollabSite</Title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 
-	<head></head>
+	<header>
+		
+	<nav class="top-navigation">
+	
+
+		
+			<ul class="links" >
+			<li class="left">
+			
+			<li>Collab1</li>
+			<li>Collab2</li>
+
+			<li class="right">
+            <li>Sign up</li>
+            <li>Login</li>
+            </li>
+
+        </ul>
+        <img class="logo" src="http://fc04.deviantart.net/fs71/i/2013/090/d/b/triforce_x_trinity_force__by_xlunaticcax-d5zw6y6.png" alt="Logo Image" width="250px">
+   
+</nav>
+
+	</header>
 
 	<body>
 
-
+	<style>
 
 
 	</body>
 
 
 	</html>
-	
