--- a/collabsite/index.html
+++ b/collabsite/index.html
@@ -20,7 +20,7 @@
             </li>
 
         </ul>
-        <img class="logo" src="http://fc04.deviantart.net/fs71/i/2013/090/d/b/triforce_x_trinity_force__by_xlunaticcax-d5zw6y6.png" alt="Logo Image" width="250px">
+        <img class="logo" src="http://fc04.deviantart.net/fs71/i/2013/090/d/b/triforce_x_trinity_force__by_xlunaticcax-d5zw6y6.png" alt="Logo Image" width="20%">
    
 </nav>
 
