--- a/collabsite/index.html
+++ b/collabsite/index.html
@@ -11,7 +11,7 @@
 
 		
 			<ul class="links" >
-			<p class="left">Our friends --></p>
+			<p class="left">Our friends </p>
 			<a class="right">
 			<a href="some link" target="_blank">Helping Hands</a>
 			<a href="Some link" target="_blank">Mission for the homeless</a>
