--- a/collabsite/index.html
+++ b/collabsite/index.html
@@ -13,8 +13,8 @@
 			<ul class="links" >
 			<p class="left">Our friends </p>
 			<a class="right">
-			<a href="some link" target="_blank">Helping Hands</a>
-			<a href="Some link" target="_blank">Mission for the homeless</a>
+			<a href="helping_hands.html" target="_blank">Helping Hands</a>
+			<a href="cause\index.html" target="_blank">Mission for the homeless</a>
             <a>Sign up</a>
             <a>Login</a>
            
