--- a/collabsite/mission.html
+++ b/collabsite/mission.html
@@ -8,17 +8,20 @@
 <body>
 <header>
 <nav class="top-navigation">
-	<ul class="links" >
-	<li class="left">
-	<li>Collab1</li>
- 	<li>Collab2</li>
- 	<li class="right">
-	<li>Sign up</li>
- 	<li>Login</li>
-     </li></ul>
+	
 
-        <img class="logo" src="http://fc04.deviantart.net/fs71/i/2013/090/d/b/triforce_x_trinity_force__by_xlunaticcax-d5zw6y6.png" alt="Logo Image" width="250px">
-   </nav>
+		
+			<ul class="links" >
+			<p class="left">Our friends </p>
+			<a class="right">
+			<a href="helping_hands.html" target="_blank">Helping Hands</a>
+			<a href="cause\index.html" target="_blank">Mission for the homeless</a>
+            <a>Sign up</a>
+            <a>Login</a>
+           
+
+        </ul>
+    </nav>
 </header>
 
 <div class="container">
@@ -26,6 +29,7 @@
 	<h1>Mission For the Homeless</h1>
 	<div id="color">
 	<p>We can end the homelessness crisis. By stabilizing people through shelter, moving them into permanent housing, and implementing assisting programs to keep them in their housing, we can not only reduce, but eliminate, homeless in New York City.</p></div>
+	<p>Your donations can help change lives. It is only through generous financial contributions and donated goods and services that it is possible to provide help and hope to the homeless and poor in New York City.</P>
 
 <div class="box">
 	<h2>Donate Online</h2>
@@ -49,8 +53,20 @@
 </div>
 </container>
 
-<div class="footer">
-<p>Send your supports to our social media!</p>
+<footer>
+	<nav class="bottom-nav">
+	<ul class="links" >
+	<li class="left">
+	<li>Collab1</li>
+ 	<li>Collab2</li>
+ 	<li class="right">
+	<li>Sign up</li>
+ 	<li>Login</li>
+     </li></ul>
+
+
+<!--<div class="footer">
+<p>For more information: </p>
    <ul class="icons">
 	<a href="site link here"><img src="https://cdn.serinus42.com/68b92483453e920/uploads/c/300/a4e0b/twitter-logo_22.png" width="30px"></a>
 	<a href="site link here"><img src="https://lh5.ggpht.com/_XklY7dK6yGsYt53X15RIp7-tbdjWMwQwl_iUAcW-uSq_8zAprmywdn5DQfBHvxZurs1=w300" width="28px"></a>
