--- a/collabsite/index.html
+++ b/collabsite/index.html
@@ -46,8 +46,8 @@ body  {
           <img class="displayed" src="http://b.fastcompany.net/multisite_files/codesign/imagecache/inline-large/inline/2013/08/1673225-inline-750-homeless3.jpg" alt="karma" width="100%" height="100%">
           </div>
           <p>We bring you two organisations that are making the headway in our crusade. <br><br>William Galarza, the founder of "Helping hands".<br> He is truely a captain among squires, a paladin among the damned.</p>
-          <a href="site link here"><img src="http://i57.tinypic.com/a3iasp.jpg" width="30%"></a>
-          <a href="site link here"><img src="http://i59.tinypic.com/x5e3c9.jpg" width="30%"></a>
+          <a href="helping_hands.html" target="_blank"><img src="http://i57.tinypic.com/a3iasp.jpg" width="30%"></a>
+          <a href="mission.html" target="_blank"><img src="http://i59.tinypic.com/x5e3c9.jpg" width="30%"></a>
           
           <p>Jane Alexander, the founder of "Mission for the homeless". Her arcane brilliance purges the evil from our world. </p>
 
