--- a/collabsite/index.html
+++ b/collabsite/index.html
@@ -71,7 +71,7 @@ body  {
                           padding-top: 13px;
                           padding-bottom: 13px;
 
-                          ">Donate to Us<button>
+                          ">Donate to Us</button>
             
             		</div>
 
